adding active state to image

--- a/index.html
+++ b/index.html
@@ -20,25 +20,24 @@
           src="./images/image-equilibrium.jpg"
           alt="NFT Image"
         />
-        <div class="title"><h1>Equilibrium #3429</h1></div>
-        <div class="description">
+        <div><h1>Equilibrium #3429</h1></div>
+        <div>
           <p>Our Equilibrium collection promotes balance and calm.</p>
         </div>
         <div class="eth-days">
           <div class="eth">
-            <img src="./images/icon-ethereum.svg" alt="eth icon" />
+            <img src="./images/icon-ethereum.svg" alt="Eth Icon" />
             <span>0.041 ETH</span>
           </div>
           <div class="days">
-            <img src="./images/icon-clock.svg" alt="clock icon" />
+            <img src="./images/icon-clock.svg" alt="Clock Icon" />
             <span>3 days left</span>
           </div>
         </div>
         <div class="credit">
           <img
-            class="avatar"
             src="./images/image-avatar.png"
-            alt="Profile Picture"
+            alt="Creator Avatar"
           /><span class="creation">Creation of</span
           ><span class="name">Jules Wyvern</span>
         </div>
