done with the active state. project finished

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </head>
     <body>
       <div class="container">
-        <img
-          class="nft-image"
-          src="./images/image-equilibrium.jpg"
-          alt="NFT Image"
-        />
+        <div class="nft-image-container">
+          <img
+            class="nft-image"
+            src="./images/image-equilibrium.jpg"
+            alt="NFT Image"
+          />
+          <div class="overlay"></div>
+          <img class="overlay-image" src="./images/icon-view.svg" alt="Overlay Image" />
+        </div>
         <div><h1>Equilibrium #3429</h1></div>
         <div>
           <p>Our Equilibrium collection promotes balance and calm.</p>
@@ -35,10 +39,9 @@
           </div>
         </div>
         <div class="credit">
-          <img
-            src="./images/image-avatar.png"
-            alt="Creator Avatar"
-          /><span class="creation">Creation of</span
+          <img src="./images/image-avatar.png" alt="Creator Avatar" /><span
+            class="creation"
+            >Creation of</span
           ><span class="name">Jules Wyvern</span>
         </div>
       </div>
