--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
   <main>
     <head>
-      <meta charset="UTF-8"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="./styles.css"/>
-      <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="./styles.css" />
+      <link
+        rel="icon"
+        type="image/png"
+        sizes="32x32"
+        href="./images/favicon-32x32.png"
+      />
       <title>Frontend Mentor | NFT preview card component</title>
     </head>
     <body>
       <div class="container">
         <div class="nft-image-container">
-          <img class="nft-image" src="./images/image-equilibrium.jpg" alt="NFT Image"/>
+          <img
+            class="nft-image"
+            src="./images/image-equilibrium.jpg"
+            alt="NFT Image"
+          />
           <div class="overlay">
-            <img class="overlay-image" src="./images/icon-view.svg" alt="Overlay Image"/>
+            <img
+              class="overlay-image"
+              src="./images/icon-view.svg"
+              alt="Overlay Image"
+            />
           </div>
         </div>
         <div><h1>Equilibrium #3429</h1></div>
@@ -22,16 +35,16 @@
         </div>
         <div class="eth-days">
           <div class="eth">
-            <img src="./images/icon-ethereum.svg" alt="Eth Icon"/>
+            <img src="./images/icon-ethereum.svg" alt="Eth Icon" />
             <span>0.041 ETH</span>
           </div>
           <div class="days">
-            <img src="./images/icon-clock.svg" alt="Clock Icon"/>
+            <img src="./images/icon-clock.svg" alt="Clock Icon" />
             <span>3 days left</span>
           </div>
         </div>
         <div class="credit">
-          <img src="./images/image-avatar.png" alt="Creator Avatar"/><span
+          <img src="./images/image-avatar.png" alt="Creator Avatar" /><span
             class="creation"
             >Creation of</span
           ><span class="name">Jules Wyvern</span>
@@ -42,7 +55,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="github.com/pvcordeiro">pvcordeiro</a>.
+          >. Coded by <a href="https://github.com/pvcordeiro">pvcordeiro</a>.
         </div>
       </footer>
     </body>
