footer moved to bottom of page and fixed some html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <main>
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./styles.css" />
-      <link
-        rel="icon"
-        type="image/png"
-        sizes="32x32"
-        href="./images/favicon-32x32.png"
-      />
-      <title>Frontend Mentor | NFT preview card component</title>
-    </head>
-    <body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <body>
+    <main>
       <div class="container">
         <div class="nft-image-container">
           <img
@@ -50,14 +50,14 @@
           ><span class="name">Jules Wyvern</span>
         </div>
       </div>
-      <footer>
-        <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="https://github.com/pvcordeiro">pvcordeiro</a>.
-        </div>
-      </footer>
-    </body>
-  </main>
+    </main>
+    <footer>
+      <div>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/pvcordeiro">pvcordeiro</a>.
+      </div>
+    </footer>
+  </body>
 </html>
