optmized eth and clock icons to be responsive

--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
         >. Coded by <a href="https://github.com/pvcordeiro">pvcordeiro</a>.
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
